<resources>
    <string name="app_name">PoorLifeDecisions</string>
    <string name="app_name1">Poor Life Decisions</string>
    <string name="greeting">Welcome</string>
    <string name="name_instructions">Please enter the name of your character:</string>
    <string name="name_hint">Name</string>
    <string name="start">START</string>
    <string name="submit">Submit</string>
    <string name="finish">FINISH</string>
    <string name="dead">DEAD</string>
    <string name="flag_image">Flag Image</string>
    <string name="skull_image">Skull Image</string>
    <string name="result">RESULT</string>

</resources>