<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_grim"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/resultsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/skullIV"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/skull_image"
        android:src="@drawable/ic_skull"
        android:padding="30dp"
        android:layout_marginTop="200dp"
        />

    <TextView
        android:id="@+id/deadTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dead"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scoreTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:text="You survived x days!" />

    <Button
        android:id="@+id/finishBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/finish"
        android:textColor="@color/design_default_color_primary"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>