<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ic_front"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/appNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name1"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/greetingTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/greeting"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@color/dark_grey" />
            <TextView
                android:id="@+id/instructionsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_instructions"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/light_grey" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="textCapWords"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/light_grey"/>

            <Button
                android:id="@+id/startBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/black"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="18sp" />



        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>